# library

./: .editorconfig  .gitignore  AGENTS.md  Cargo.toml  LICENSE  NOTICE  README.md  clippy.toml  rust-toolchain.toml
.claude/skills/verify/: SKILL.md
.github/workflows/: ci.yml
anny/: Cargo.toml  readme.md
anny/benches/: hnsw.rs
anny/src/: hnsw.rs  lib.rs  metric.rs  traits.rs
apps/librarian/: Package.swift
apps/librarian/Sources/librarian/: main.swift
apps/library-app/: Cargo.toml  tauri.conf.json
apps/library-app/capabilities/: default.json
apps/library-app/icons/: icon.icns
apps/library-app/src/: chat.rs  commands.rs  docs.rs  engine.rs  ingest.rs  lib.rs  main.rs  marginalia.rs  serve.rs  settings.rs
apps/library-core/: Cargo.toml
apps/library-core/examples/: legscan.rs
apps/library-core/src/: annots.rs  images.rs  legibility.rs  lib.rs  notes.rs  perf.rs  rank.rs  records.rs  search_api.rs  sidecar.rs  store.rs  termdict.rs  text.rs  tools.rs  wire.rs
apps/library-core/tests/: answer_e2e.rs  commit_chunks.rs  notebox.rs  notes_search.rs  search_e2e.rs
apps/library-ingest/: Cargo.toml
apps/library-ingest/src/: agent.rs  clean.rs  layout.rs  lib.rs  main.rs  ocr.rs  pdftext.rs  status.rs  subdivide.rs  textout.rs  worker.rs
apps/library-server/: Cargo.toml
apps/library-server/src/: chat.rs  main.rs  wt.rs
apps/web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/web/src/: annotations.ts  assets.ts  chat.ts  composer.ts  dedupe.test.ts  dom.ts  drawer.ts  format.test.ts  format.ts  highlights.ts  home.ts  ingest-ui.ts  main.ts  marginalia-api.ts  notebox-model.test.ts  notebox-model.ts  notebox.ts  perf.ts  reader.ts  search.ts  selection.test.ts  selection.ts  state.ts  style.css  tauri.ts  toast.ts  transport.ts  types.ts  viewer.ts  webtransport.d.ts  webtransport.ts
apps/web/src/styles/: annotations.css  base.css  chat.css  dropzone.css  home.css  index.css  notebox.css  perf.css  reader.css  search-popover.css  search-results.css  toast.css  tokens.css  viewer.css
docs/: rca-bm25-doclen-point-reads.md  rca-fjall-write-stall.md
docs/plans/: chat-agent.md
docs/spikes/: chat-spike.md  probe-results.json  retrieval-results.json
ese/: .gitignore  Cargo.toml  build.rs  readme.md
ese/.cargo/: config.toml
ese/api-py/: Cargo.toml  pyproject.toml  readme.md
ese/api-py/src/: lib.rs
ese/benches/: bench_encode.rs  gooaq.rs
ese/benches/py/: .gitignore  all_nanobeir.sh  bench.py  model_loader.py  models.txt  nanobeir.py  pyproject.toml
ese/src/: lib.rs  lookup.rs  pretokenizer.rs  wordpiece.rs
ese/src/test/: mod.rs
examples/chat/: Cargo.toml
examples/chat/src/: main.rs
examples/librarian-eval/: Cargo.toml
examples/librarian-eval/fixtures/: p1-notool-02.json  p1-search-01.json  p1-search-03.json  p1-search-04.json  p1-search-05.json  p1-search-06.json  p1-search-07.json  p2-abstain.json  p2-answerable.json  p3-onepage.json  p3-twopage.json  p4-catalog.json  p4-recipe.json  p5-crossdoc.json  p6-reformulate.json  p7-ctx1.json  p7-ctx2.json  p7-ctx4.json  p8-guardrail-02.json  p8-guardrail-03.json  p8-guardrail-04.json  p8-guardrail-05.json  p8-guardrail-07.json  p8-guardrail-08.json  p9-blankpage.json
examples/librarian-eval/src/: main.rs
examples/search/: Cargo.toml
examples/search/src/: main.rs
examples/starter/: Cargo.toml
examples/starter/src/: main.rs
examples/timeseries/: Cargo.toml
examples/timeseries/src/: main.rs
fold/: .gitignore  Cargo.toml
fold/src/: lib.rs
fold/src/pipeline/: mod.rs  tuple.rs
fold/src/pipeline/ops/: keyed.rs  mod.rs  retain.rs  scored.rs
fold/src/pipeline/terminal/: histogram.rs  mod.rs  ranked.rs  stats.rs  table.rs
fold/src/pipeline/terminal/search/: hnsw.rs  mod.rs
fold/src/stream/: keyed.rs  mod.rs  unkeyed.rs
fold/src/tests/: agnews.rs  bm25.rs  hnsw.rs  keyed_stream.rs  mod.rs  retain.rs  rtx.rs  scored.rs  terminals.rs
scripts/: new-project.sh
tools/: backfill-titles.sh  build.sh
tools/clean-pages/: main.swift
tools/librarian-eval/: Cargo.toml  README.md
tools/librarian-eval/fixtures/: fig-verify.json  mt-another-fact.json  mt-tell-me-more.json  p1-notool-01.json  p1-search-02.json  p1-search-08.json  p10-route-overview.json  p10-route-read-tonight.json  p10-route-wisdom.json  p2-abstain.json  p2-answerable.json  p3-onepage.json  p3-twopage.json  p4-catalog.json  p4-recipe.json  p5-crossdoc.json  p7-ctx1.json  p7-ctx2.json  p7-ctx4.json  p8-guardrail-01.json  p8-guardrail-06.json  p8-guardrail-07.json  p9-blankpage.json  scoped-search.json  titles-not-ids.json
tools/librarian-eval/src/: main.rs
