[workspace]
resolver = "3"
members = [
    "fold",
    "anny",
    "ese",
    "examples/*",
    "apps/library-core",
    "apps/library-ingest",
    "apps/library-server",
    "apps/library-app",
]

[workspace.dependencies]
fold = { path = "fold" }
anny = { path = "anny" }
ese = { path = "ese", features = ["dim-512", "quant-8"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fxhash = "0"
postcard = { version = "1", features = ["use-std"] }
fjall = { version = "3", default-features = false }
anyhow = "1"

# hoisted from fold; applies workspace-wide
[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"

# hoisted from anny
[profile.bench]
lto = "fat"
codegen-units = 1
