[workspace]
resolver = "3"
members = [
    "fold",
    "anny",
    "ese",
    "examples/*",
    "tools/librarian-eval",
    "apps/library-core",
    "apps/library-ingest",
    "apps/library-server",
    "apps/library-app",
]

[workspace.package]
edition = "2024"
# edition 2024 floor; CI pins the actual toolchain in rust-toolchain.toml
rust-version = "1.85"

[workspace.dependencies]
fold = { path = "fold" }
anny = { path = "anny" }
ese = { path = "ese", features = ["dim-512", "quant-8", "rayon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fxhash = "0"
postcard = { version = "1", features = ["use-std"] }
fjall = { version = "3", default-features = false }
anyhow = "1"

# hoisted from fold; applies workspace-wide
[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"

# the search/store hot path runs at near-release speed inside `cargo tauri
# dev` and debug test runs — BM25 over a full library is 10-40x slower
# unoptimized, which reads as an app hang
[profile.dev.package.fold]
opt-level = 2
[profile.dev.package.library-core]
opt-level = 2
[profile.dev.package.anny]
opt-level = 2
[profile.dev.package.ese]
opt-level = 2
[profile.dev.package.fjall]
opt-level = 2
[profile.dev.package.lsm-tree]
opt-level = 2
[profile.dev.package.byteview]
opt-level = 2
[profile.dev.package.postcard]
opt-level = 2
[profile.dev.package.fxhash]
opt-level = 2

# hoisted from anny
[profile.bench]
lto = "fat"
codegen-units = 1
