[package]
name = "anny"
version = "0.0.1"
edition = "2024"
readme = "readme.md"
license = "Apache-2.0 OR MIT"
documentation = "https://docs.rs/anny"
homepage = "https://github.com/flowercomputers/anny"
repository = "https://github.com/flowercomputers/anny"
authors = ["W. Turner Abney <william@flowercomputer.com>"]
keywords = ["ann", "knn", "hnsw", "distance", "search"]
categories = ["data-structures", "artificial-intelligence", "algorithms", "science"]
[[bench]]
name = "hnsw"
harness = false

[features]
bench_compare = ["dep:instant-distance", "dep:hnsw_rs"]

[dependencies]
instant-distance = { version = "0", optional = true }
hnsw_rs          = { version = "0", optional = true }

[dev-dependencies]
criterion = "0"
