[package]
name = "fold"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license = "Apache-2.0"

[dependencies]
anny = { path = "../anny" }
fxhash = "0"
postcard = { version = "1", features = ["use-std"] }
serde = { version = "1", features = ["derive"] }
fjall = { version = "3", default-features = false }

[lints]
workspace = true
