[package]
name = "library-app"
version = "0.0.1"
edition = "2024"

[lib]
name = "library_app"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
library-core = { path = "../library-core" }
library-ingest = { path = "../library-ingest" }
ese = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
fastembed = "4"
libc = "0.2"
percent-encoding = "2"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
