[package]
name = "library-app"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license = "Apache-2.0"

[lib]
name = "library_app"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
library-core = { path = "../library-core" }
library-ingest = { path = "../library-ingest" }
fjall = { workspace = true }
ese = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
fastembed = "4"
image = "0.25"
libc = "0.2"
percent-encoding = "2"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"

[lints]
workspace = true
