[package]
name = "library-core"
version = "0.0.1"
edition = "2024"
license = "Apache-2.0"

[dependencies]
fold = { workspace = true }
anny = { workspace = true }
ese = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
fxhash = { workspace = true }
fjall = { workspace = true }
postcard = { workspace = true }
