[package]
name = "chat"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
axum = { version = "0.8", features = ["ws"] }
fold = { path = "../../fold" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
